fullSandbox11072023/force-app/main/default/objects/Product_List__c/Product_List__c.object-meta.xml
<CustomObject>
    <label>Complaint Product</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>