fullSandbox11072023/force-app/main/default/objects/Product_List__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>