fullSandbox11072023/force-app/main/default/objects/Product_List__c/fields/Eaches_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Eaches_per_Case__c</fullName>
    <label>Eaches per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>