fullSandbox11072023/force-app/main/default/objects/Product_List__c/fields/New_ECC_Product__c.field-meta.xml
<CustomField>
    <fullName>New_ECC_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to track new product via ECC merge</description>
    <label>New ECC Product</label>
    <type>Checkbox</type>
</CustomField>