fullSandbox11072023/force-app/main/default/objects/Product_List__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <externalId>true</externalId>
    <label>Product Code External</label>
    <length>64</length>
    <type>Text</type>
</CustomField>