fullSandbox11072023/force-app/main/default/objects/Product_List__c/fields/Product_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Old__c</fullName>
    <description>Temporary field created to capture old product name before SLO merge ,loaded old codes via DL</description>
    <label>Product Name Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>