fullSandbox11072023/force-app/main/default/objects/Product_List__c/fields/SLO_Impact__c.field-meta.xml
<CustomField>
    <fullName>SLO_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field created to validate SLO, Checked the box via DL to show impacted product before the SLO merge</description>
    <label>SLO Impact</label>
    <type>Checkbox</type>
</CustomField>